# koopman-mpc-portfolio-rebalancing

./: .gitignore  README.md  backtest.py  baselines.py  config.py  data.py  data_finance.py  evaluation.py  model.py  mpc.py  pyproject.toml  run_experiment.py  sweep_sparsity.py  test_finance_data.py  train.py
runs/kae/20251127-140804/: checkpoint.pt  config.json  evaluation_results_best.json  evaluation_results_last.json  final_metrics.json  last.pt  metrics_summary.json
runs/kae/20251127-140804/evaluation_best/: metrics.json
runs/kae/20251127-140804/evaluation_last/: metrics.json
runs/kae/20251127-153746/: config.json
runs/kae/20251127-154756/: checkpoint.pt  evaluation_results_best.json  evaluation_results_last.json  evaluation_summary.json  final_metrics.json  last.pt  metrics_history.jsonl  metrics_summary.json
runs/kae/20251127-154756/evaluation_best/: metrics.json
runs/kae/20251127-154756/evaluation_last/: metrics.json
runs/kae/20251129-142359/: checkpoint.pt  config.json  evaluation_results_best.json  evaluation_results_last.json  final_metrics.json  last.pt  metrics_summary.json
runs/kae/20251129-142359/evaluation_best/: metrics.json
runs/kae/20251129-142359/evaluation_last/: metrics.json
tests/: test_backtest.py  test_baselines.py  test_finance_data.py  test_mpc.py
