[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skae"
version = "0.1.0"
description = "Koopman Sparse Autoencoder research sandbox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
    "pytest>=8.4.2",
    "ipykernel>=7.0.1",
    "jax>=0.6.2",
    "ml-collections>=1.1.0",
    "flax>=0.10.7",
    "optax>=0.2.6",
    "torchdiffeq>=0.2.3",
    "yfinance>=0.2.66",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "cvxpy>=1.7.5",
    "pyarrow>=20.0.0",
]

[project.optional-dependencies]
develop = ["pytest"]
# CUDA PyTorch for Linux users who want GPU support
# Install with: uv pip install --extra-index-url https://download.pytorch.org/whl/cu128 torch
cuda = [
    # Note: CUDA PyTorch must be installed manually on Linux:
    # uv pip install --extra-index-url https://download.pytorch.org/whl/cu128 "torch>=2.2"
]

[tool.setuptools]
py-modules = [
    "main",
    "models",
    "losses",
    "data",
    "data_finance",
    "train",
    "eval",
    "evaluation",
    "utils",
    "config",
    "model",
]

# CUDA PyTorch index - only used on Linux when explicitly requested
# On macOS/Windows, PyTorch will install from PyPI (CPU version)
# On Linux, users can install CUDA version manually if needed
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
# Note: This index is not used by default to ensure macOS/Windows compatibility
# To use CUDA PyTorch on Linux, install manually:
# uv pip install --extra-index-url https://download.pytorch.org/whl/cu128 "torch>=2.2"
